Enneper and Enneper intersection models

--- a/Sphere.ipynb
+++ b/Sphere.ipynb
@@ -2,15 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4c782313",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even number of rows. Repeat every round in reverse.\n",
+      "\n",
+      "0. 6 stitches in a magic loop\n",
+      "1. +6 (12)\n",
+      "2. +6 (18)\n",
+      "3. +6 (24)\n",
+      "4. +5 (29)\n",
+      "5. +4 (33)\n",
+      "6. +4 (37)\n",
+      "7. +3 (40)\n",
+      "8. +2 (42)\n",
+      "9. +2 (44)\n",
+      "10. +0 (44)\n",
+      "\n",
+      "Number of stitches in the model 658\n"
+     ]
+    }
+   ],
    "source": [
     "# Fill below how large you would like your sphere to be (diameter), and the width and height of your stitch.\n",
     "\n",
+    "# Start the model by creating the indicated number of stitches into a magic loop. \n",
+    "# From round 1. forward the number of stitches to be added at the round is indicated by +XX and \n",
+    "# the numer of stitches per round is shown in the parenthesis (YY). \n",
+    "\n",
+    "\n",
     "# Size of the sphere (diameter = width = height)\n",
-    "Size = 6\n",
+    "Size = 7\n",
     "\n",
     "# Height of your stitch\n",
     "H = 0.5 \n",
@@ -62,7 +89,7 @@
     "if np.mod(lmax1,2) == 0:\n",
     "    print('Even number of rows. Repeat every round in reverse.')\n",
     "else: \n",
-    "    print('Odd number of rows. Crochet the last round only ones and repeat from the second last round in reverse.')\n",
+    "    print('Odd number of rows. Crochet the last round only ones and work in reverse from the second last round.')\n",
     "    \n",
     "print()\n",
     "    \n",
@@ -89,15 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f226f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0fb0d30",
+   "id": "c04a751f",
    "metadata": {},
    "outputs": [],
    "source": []
