--- a/EnneperIntesection.ipynb
+++ b/EnneperIntesection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "0b796b52",
    "metadata": {},
    "outputs": [
@@ -10,45 +10,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0. 7.0 stitches in a magic loop\n",
-      "1. +9.0 (16.0)\n",
-      "2. +12.0 (28.0)\n",
-      "3. +13.0 (41.0)\n",
-      "4. +13.0 (54.0)\n",
-      "5. +15.0 (69.0)\n",
-      "6. +15.0 (84.0)\n",
-      "7. +16.0 (100)\n",
+      "0. 8.0 stitches in a magic loop\n",
+      "1. +9.0 (17.0)\n",
+      "2. +12.0 (29.0)\n",
+      "3. +14.0 (43.0)\n",
+      "4. +15.0 (58.0)\n",
+      "5. +15.0 (73.0)\n",
+      "6. +16.0 (89.0)\n",
+      "7. +17.0 (106.0)\n",
+      "8. +18.0 (124)\n",
       "\n",
-      "Divide into four sections all with 25 stitches\n",
+      "Divide into four sections all with 31 stitches\n",
       "\n",
       "Number of stitches per inner section\n",
-      "    5    9   12\n",
+      "    3    8   12   15   18   22   25   28   31\n",
       "Number of stitches moved in\n",
-      "    4    3    2\n",
+      "    3    4    2    2    2    2    1    1    1\n",
       "Increases per inner section\n",
-      "    1    1    1\n",
+      "    0    1    2    1    1    2    2    2    2\n",
       "\n",
       "Number of stitches per outer section\n",
-      "   24   24   25\n",
+      "   32   31   32   33   35   36   38   39   41\n",
       "Increases per outer section\n",
-      "    3    3    3\n",
+      "    4    3    3    3    4    3    3    2    3\n",
       "\n",
-      "Number of stitches in the model 795\n"
+      "Number of stitches in the model 2463\n"
      ]
     }
    ],
    "source": [
+    "# A crochet formula for an order 2 Enneper surface with an intersection. \n",
+    "# For a general order of symmetry model (without instructions on the intersections) see the notebook Enneper. \n",
     "\n",
-    "# \n",
-    "rc = 2\n",
+    "# Fill below the radius in the co-ordinate system and scaling, \n",
+    "# and the width and height of your stitch. \n",
+    "\n",
+    "# Radius (in the co-ordinate system)\n",
+    "rc = 2.3\n",
     "# Scaling of the model \n",
-    "a = 1.2\n",
+    "a = 1.41\n",
     "\n",
     "\n",
     "# Height of a stitch \n",
     "H = 0.5\n",
     "# Width of a stitch\n",
-    "W = 0.5       \n",
+    "W = 0.45       \n",
     "\n",
     "\n",
     "\n",
