Added a link to paper

--- a/Enneper.ipynb
+++ b/Enneper.ipynb
@@ -35,7 +35,8 @@
    "source": [
     "# A crochet formula for an Enneper surface with order of symmetry n. \n",
     "# This notebook gives you the number of stitches required per round with chosen order of symmetry. \n",
-    "# For an order 2 model with detailed instructions on the intersection see the notebook EnneperIntersection. \n",
+    "# For an order 2 model with detailed instructions on the intersection see the notebook EnneperIntersection.\n",
+    "# For detailed instructions see the Mathematical Intelligencer article https://rdcu.be/dxNVK\n",
     "\n",
     "# Fill below the radius in the co-ordinate system, scaling, and order of symmetry for the model,  \n",
     "# and the width and height of your stitch.\n",
