--- a/EnneperIntesection.ipynb
+++ b/EnneperIntesection.ipynb
@@ -41,6 +41,7 @@
    "source": [
     "# A crochet formula for an order 2 Enneper surface with an intersection. \n",
     "# For a general order of symmetry model (without instructions on the intersections) see the notebook Enneper. \n",
+    "# For detailed instructions see the Mathematical Intelligencer article https://rdcu.be/dxNVK\n",
     "\n",
     "# Fill below the radius in the co-ordinate system and scaling, \n",
     "# and the width and height of your stitch. \n",
