--- a/Sphere.ipynb
+++ b/Sphere.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4c782313",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Even number of rows. Repeat every round in reverse.\n",
+      "Odd number of rows. Crochet the last round only ones and work in reverse from the second last round.\n",
       "\n",
       "0. 6 stitches in a magic loop\n",
       "1. +6 (12)\n",
       "2. +6 (18)\n",
-      "3. +6 (24)\n",
-      "4. +5 (29)\n",
-      "5. +4 (33)\n",
-      "6. +4 (37)\n",
-      "7. +3 (40)\n",
-      "8. +2 (42)\n",
-      "9. +2 (44)\n",
-      "10. +0 (44)\n",
+      "3. +5 (23)\n",
+      "4. +5 (28)\n",
+      "5. +4 (32)\n",
+      "6. +3 (35)\n",
+      "7. +2 (37)\n",
+      "8. +1 (38)\n",
+      "9. +0 (38)\n",
       "\n",
-      "Number of stitches in the model 658\n"
+      "Number of stitches in the model 534\n"
      ]
     }
    ],
@@ -35,9 +34,13 @@
     "# From round 1. forward the number of stitches to be added at the round is indicated by +XX and \n",
     "# the numer of stitches per round is shown in the parenthesis (YY). \n",
     "\n",
+    "# Only the first half is show. If the model is noted to have even number of rows repeat every round in reverse. \n",
+    "# Otherwise crochet the last round only ones and work in reverse from the second last round.\n",
+    "\n",
+    "\n",
     "\n",
     "# Size of the sphere (diameter = width = height)\n",
-    "Size = 7\n",
+    "Size = 6\n",
     "\n",
     "# Height of your stitch\n",
     "H = 0.5 \n",
